:whale: Adds debug commands
for debuggin'

--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -6,6 +6,13 @@ WORKDIR /app
 
 COPY $EXE_DIR/ ./
 
+CMD tree
+
 CMD ["dotnet", "publish", "FilterModule.csproj"]
 
+CMD tree
+
 CMD ["dotnet", "FilterModule.dll"]
+
+CMD tree
+CMD ["echo" "bye-bye"]
