:whale: :shirt: My linter told me to make this commit
Using 'RUN' instead of multiple 'CMD'

--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /app
 
 COPY $EXE_DIR/ ./
 
-CMD ["dotnet", "publish", "FilterModule.csproj"]
+RUN ["dotnet", "publish", "FilterModule.csproj"]
 
 CMD ["dotnet", "FilterModule.dll"]
