Revert ":whale: :shirt: My linter told me to make this commit"
This reverts commit f8c46db85a7358d2decbabe79fb5c5bc4e4ec559.

--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR /app
 
 COPY $EXE_DIR/ ./
 
-RUN ["dotnet", "publish", "FilterModule.csproj"]
+CMD ["dotnet", "publish", "FilterModule.csproj"]
 
 CMD ["dotnet", "FilterModule.dll"]
