:whale: Moving the binary to the top level

--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -9,3 +9,5 @@ COPY $EXE_DIR/ ./
 CMD ["dotnet", "publish", "FilterModule.csproj"]
 
 CMD ["dotnet", "FilterModule.dll"]
+
+ENTRYPOINT [ "FilterModule.dll" ]
