--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -6,8 +6,4 @@ WORKDIR /app
 
 COPY $EXE_DIR/ ./
 
-CMD ["dotnet", "publish", "FilterModule.csproj"]
-
-CMD ["dotnet", "FilterModule.dll"]
-
-ENTRYPOINT [ "FilterModule.dll" ]
+ENTRYPOINT [ "dotnet", "FilterModule.dll" ]
