:ambulance: Attempt to fix Dockerfile

--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -2,6 +2,8 @@ FROM microsoft/dotnet:2.0.0-runtime-stretch
 
 WORKDIR /app
 
-COPY ./FilterModule/bin/Debug/netcoreapp2.0/publish ./
+CMD ["dotnet", "publish", "FilterModule.csproj"]
 
+COPY ./FilterModule/bin/Debug/netcoreapp2.0/publish ./
+RUN ls
 ENTRYPOINT [ "dotnet", "FilterModule.dll" ]
