:ambulance: Still not working

--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -2,8 +2,10 @@ FROM microsoft/dotnet:2.0.0-runtime-stretch
 
 WORKDIR /app
 
-CMD ["dotnet", "publish", "FilterModule.csproj"]
+RUN dotnet publish FilterModule.csproj
 
 COPY ./FilterModule/bin/Debug/netcoreapp2.0/publish ./
+
 RUN ls
+
 ENTRYPOINT [ "dotnet", "FilterModule.dll" ]
