--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -3,13 +3,15 @@ WORKDIR /app
 
 # copy everything else and build app
 COPY . .
+RUN ls
 WORKDIR /app/FilterModule
-RUN dotnet build
+RUN dotnet build FilterModule.csproj
+RUN ls
 
 FROM build AS publish
 WORKDIR /app/FilterModule
 RUN dotnet publish -c Release -o out
-
+RUN ls
 
 FROM microsoft/dotnet:2.0-runtime AS runtime
 WORKDIR /app
