--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -1,20 +1,22 @@
 FROM microsoft/dotnet:2.0-sdk AS build
+RUN pwd
 WORKDIR /app
 RUN ls -lha
 
 # copy everything else and build app
-COPY / .
-WORKDIR /app/FilterModule
-RUN dotnet build FilterModule.csproj
 RUN pwd
 RUN ls -lha
+COPY / .
+RUN ls -lha
+WORKDIR /app/FilterModule
+RUN dotnet build /app/FilterModule.csproj
 
 FROM build AS publish
+RUN pwd
+RUN ls -lha
 WORKDIR /app/FilterModule
 RUN pwd
 RUN dotnet publish -c Release -o out
-RUN pwd
-RUN ls -lha
 
 FROM microsoft/dotnet:2.0-runtime AS runtime
 RUN pwd
