--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -6,19 +6,5 @@ RUN ls -lha
 # copy everything else and build app
 RUN pwd
 RUN ls -lha
-COPY ../../../FilterModule .
+COPY ../../FilterModule .
 RUN ls -lha
-WORKDIR /app
-RUN dotnet build FilterModule.csproj
-
-FROM build AS publish
-RUN pwd
-RUN ls -lha
-WORKDIR /apps
-RUN dotnet publish -c Release -o out
-
-FROM microsoft/dotnet:2.0-runtime AS runtime
-RUN pwd
-RUN ls -lha
-COPY --from=publish /app/out ./
-ENTRYPOINT ["dotnet", "FilterModule.dll"]
