--- a/FilterModule/Docker/linux-x64/Dockerfile
+++ b/FilterModule/Docker/linux-x64/Dockerfile
@@ -6,5 +6,17 @@ RUN ls -lha
 # copy everything else and build app
 RUN pwd
 RUN ls -lha
-COPY ../../FilterModule .
+COPY ./../../FilterModule .
 RUN ls -lha
+RUN dotnet build FilterModule.csproj
+
+FROM build AS publish
+RUN pwd
+RUN ls -lha
+RUN dotnet publish -c Release -o out
+
+FROM microsoft/dotnet:2.0-runtime AS runtime
+RUN pwd
+RUN ls -lha
+COPY --from=publish /app/out ./
+ENTRYPOINT ["dotnet", "FilterModule.dll"]
